Add bean images and some other improvements
